tests/semantica/invalid/declaracion/test2.ctds
program
	{
		void x = 0;

		void main(){
			
		}
	}